--- a/01_html/07_form.html
+++ b/01_html/07_form.html
@@ -20,6 +20,7 @@
       5) radio     : 단일 선택
       6) checkbox  : 다중 선택
       7) button    : 버튼
+
     4. 주요 속성
           속성이름        속성값         의미
       1)  type         text/password      입력란의 종류를 의미함
@@ -90,8 +91,141 @@
     (체크하면 value = "on", 체크안하면 value="" )-->
   <input type="checkbox" name="swim" >수영
   <input type="checkbox" name="travel" >여행
+  <br>
+  <hr>
+  <br>
 
-  
+  <!--
+    다중 행 입력란
+    1. 인라인 요소
+    2. 형식
+      <textarea></textarea>
+    3. 주요 속성
+      1) rows : 입력가능한 행 수
+      2) cols : 입력가능한 열 수
+  -->
+  <textarea name="" id="" cols="30" rows="5"></textarea>
+  <br>
+  <hr>
+  <br>
+  <!--
+    목록 상자
+    1. 인라인 요소
+    2. 형식
+    <select>
+      <option></option>
+      <option></option>
+      <option></option>
+    </select>
+    3. 주요 속성
+    1) selected : 기본 선택 항목에 추가하는 속성으로 <option>태그에 추가한다.
+    2) value 
+      (1) <option> 태그 사이에 있는 텍스트가 value 속성값이 된다.
+      (2) <option> 태그에 value 속성을 추가할 수 있다.
+      -->
+  <select name="country-no" id="">
+    <option value="01">가나 +01</option>
+    <option value="02">가봉 +02</option>
+    <option value="82" selected>한국 +82</option>
+    <option value="99">일본 +99</option>
+  </select>
+
+
+  <hr>
+  <!-- 
+    콤보상자 (입력란 + 목록 선택)
+    1. 인라인 요소
+    2. 형식
+      <input type = "text" list="datalist 아이디">
+      <datalist id="아이디">
+        <option></option>
+        <option></option>
+        <option></option>
+      </datalist>
+  -->
+
+  <input type="text" placeholder="선택 또는 입력" list="domain">
+  <datalist id="domain">
+    <option>naver.com</option>
+    <option>kakaco.com</option>
+    <option>gmail.com</option>
+  </datalist>
+
+  <br><br>
+  <hr>
+
+  <!--
+    폼
+    1. 하나의 요청을 처리하는 단위이다.
+    2. 서버측으로 보낼 입력요소(input, textarea, select 등)들을 폼 내부에 만든다.
+    3. 서브밋(submit) : 폼 내부의 입력 요소들을 모두 서버측으로 보내는 것을 말한다.
+    4. 형식
+      <form action = "서버 경로(url)" 
+            method = "요청 메소드(get/post)">
+        <input>
+        <select>
+        <textarea>
+        <button>
+      </form> 
+  -->
+  <!-- 
+    버튼
+    1. 인라인 요소
+    2. 종류
+      1) 서브밋  
+        (1) <input type = "submit" value="버튼텍스트">
+        (2) <button type = "submit"> 버튼 텍스트 </button>
+      2) 초기화
+        (1) <input type = "reset" value ="버튼텍스트">
+        (2) <button type = "reset"> 버튼텍스트 </button>
+      3) 일반 버튼
+        일반(아무 일도 안 함)
+        (1) <input type = "button" value = "버튼텍스트">
+        (2) <button type  ="button">버튼텍스트</button>   
+  -->
+
+  <form action="/server/anywhere" method="post">
+    <input type="text" name="name" value="홍길동">
+    <select name="gender" id="">
+      <option >남</option>
+      <option >여</option>
+    </select>
+
+    <button type="submit">전송</button>
+  </form>
+
+
+  <hr>
+
+  <h1>네이버검색폼</h1>
+
+  <form action="https://search.naver.com/search.naver" method="get">
+    <input type="text" name="query" value="" placeholder="검색어를 입력하세요">
+    <input type="hidden" name="ie" value="utf-8">
+    <button type="submit"><img src="../../assets/image/check1.png" alt="" style="width:30px"></button>
+  </form>
+
+
+  <br>
+  <hr>
+  <br>
+  <!--
+    라벨
+    1. 인라인 요소
+    2. 입력 요소와 연결할 텍스트를 처리하는 태그
+    3. 형식
+        <label for= "입력요소 아이디">텍스트</label>
+        <input id="아이디" >
+
+  -->
+  <h2>라벨</h2>
+  <input type="radio" name="gender" value="man" id="man">
+  <label for="man">남자</label>
+  <input type="radio" name="gender" value="woman" id="woman">
+  <label for="woman">여자</label>
+
+  <br><br>
+
 
 </body>
 </html>
